deployments/rolling-updates/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: demo-app
  name: demo-app
  namespace: rolling-updates
spec:
  selector:
    matchLabels:
      run: demo-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        run: demo-app
    spec:
      containers:
        - image: gcr.io/google-samples/hello-app:1.0
          name: demo-app
          ports:
            - containerPort: 8080
              name: web
          readinessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 5
            httpGet:
              port: 8080
              path: /
          livenessProbe:
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 5
            httpGet:
              port: 8080
              path: /
