deployments/rolling-updates/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: rolling-updates
spec:
  rules:
    - host: 192-168-99-114.nip.io
      http:
        paths:
          - backend:
              serviceName: demo
              servicePort: 8080
